--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.vqqrqgm.mongodb.net
-      MONGODB_USERNAME: erickfloressalinas
-      MONGODB_PASSWORD: VelP8wd5yeknftl9
+      MONGODB_USERNAME: ${{ secrets.MONGODB_US }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
@@ -38,5 +38,5 @@ jobs:
     steps:
       - name: Output information
         run: |        
-          echo "MONGODB_USERNAME: ${{ env.PORT }}"
+          echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
           echo "MONGO_DB_NAME: $MONGO_DB_NAME"
